--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "tsc && vite build",
+    "build": "rm -rf dist && tsc && vite build && cp -R music dist/music",
     "preview": "vite preview"
   },
   "devDependencies": {
